# hotel-booking

./: .env  .gitignore  Dockerfile  Makefile  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  justfile  pyproject.toml  pytest.ini
backend/: .bandit.yaml  .coveragerc  .env.example  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Justfile  docker-compose.yml  pyproject.toml  pytest.ini
backend/apps/common/: fields.py  models.py  notifications.py  permissions.py  utils.py
backend/apps/tours/: admin.py  consumers.py  filters.py  permissions.py  routing.py  selectors.py  services.py  tasks.py  urls.py  views.py
backend/apps/tours/enums/: __init__.py  agency.py  hotel.py  tour.py
backend/apps/tours/migrations/: 0001_initial.py  0002_seed_amenities.py  0003_owner_role_remove_agency_owner.py  0004_invitation_role.py  0005_seed_agencies_tours.py  0006_wishlist.py  0007_booking_remove_wishlist_unique_user_tour_wishlist_and_more.py  0008_booking_room_booking_room_count.py  0009_tour_rating_tourreview.py  0010_agency_rating_agencyreview.py
backend/apps/tours/models/: __init__.py  agency.py  agency_review.py  booking.py  hotel.py  location.py  notification.py  review.py  tour.py
backend/apps/tours/selectors/: __init__.py  agency.py  agency_review.py  booking.py  employee.py  hotel.py  invitation.py  notification.py  review.py  tour.py  wishlist.py
backend/apps/tours/serializers/: __init__.py  agency.py  agency_review.py  booking.py  employee.py  hotel.py  invitation.py  location.py  notification.py  review.py  tour.py
backend/apps/tours/tests/: conftest.py  test_agency.py  test_consumers.py  test_invitations.py  test_notifications.py  test_tour_filters.py  test_tours.py
backend/apps/tours/views/: __init__.py  agency.py  agency_booking.py  agency_review.py  amenity.py  booking.py  employee.py  invitation.py  (+6 more)
backend/apps/users/: admin.py  authentication.py  middlewares.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend/config/: asgi.py  celery.py  env.py  settings.py  urls.py
(+119 files in other folders)
