[project]
name = "hotel-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery-types>=0.24.0",
    "celery[redis]>=5.6.2",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "cryptography>=46.0.5",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-minio-storage>=0.5.9",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.8",
    "drf-spectacular>=0.29.0",
    "faker>=40.8.0",
    "granian[reload]>=2.7.2",
    "httpx>=0.28.1",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "model-bakery>=1.23.3",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "sqlalchemy>=2.0.0",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "ruff>=0.15.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
